create until table six dtps mahasiswa

--- a/frontend/before_login/table_six/penelitian_dtps_mahasiswa.html
+++ b/frontend/before_login/table_six/penelitian_dtps_mahasiswa.html
@@ -41,7 +41,7 @@
             <!-- Logo Header -->
             <div class="logo-header" data-background-color="blue2">
 
-                <a href="../index.html" class="logo">
+                <a href="index.html" class="logo">
                     <img src="/assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
                 </a>
                 <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
@@ -190,17 +190,17 @@
                             <div class="collapse" id="table_one">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="../table_one/pendidikan.html">
                                             <span class="sub-item">Pendidikan</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_one/penelitian.html">
                                             <span class="sub-item">Penelitian</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="pengabdian.html">
+                                        <a href="../table_one/pengabdian.html">
                                             <span class="sub-item">Pengabdian Masyarakat</span>
                                         </a>
                                     </li>
@@ -216,12 +216,12 @@
                             <div class="collapse" id="table_two">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="../table_two/seleksi_mahasiswa.html">
+                                        <a href="seleksi_mahasiswa.html">
                                             <span class="sub-item">Seleksi Mahasiswa</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="../table_two/mahasiswa_asing.html">
+                                        <a href="mahasiswa_asing.html">
                                             <span class="sub-item">Mahasiswa Asing</span>
                                         </a>
                                     </li>
@@ -308,7 +308,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="../table_four/penggunaan_dana.html">
+                            <a href="#">
                                 <i class="fas fa-money-bill-alt"></i>
                                 <p>Penggunaan Dana</p>
                             </a>
@@ -322,19 +322,19 @@
                             <div class="collapse" id="table_five">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="../table_five/kurikulum_capaian.html">
+                                        <a href="kurikulum_capaian.html">
                                             <span class="sub-item">Kurikulum, Capaian Pembelajaran, dan Rencana
                                                 Pembelajaran</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="../table_five/integrasi_kegiatan.html">
+                                        <a href="integrasi_kegiatan.html">
                                             <span class="sub-item">Integrasi Kegiatan Penelitian/PkM dalam
                                                 Pembelajaran</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="../table_five/kepuasan_mahasiswa.html">
+                                        <a href="kepuasan_mahasiswa.html">
                                             <span class="sub-item">Kepuasan Mahasiswa</span>
                                         </a>
                                     </li>
@@ -350,12 +350,12 @@
                             <div class="collapse" id="table_six">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="../table_six/penelitian_dtps_mahasiswa.html">
+                                        <a href="penelitian_dtps_mahasiswa.html">
                                             <span class="sub-item">Penelitian DTPS yang Melibatkan Mahasiswa</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="../table_six/penelitian_dtps_rujukan.html">
+                                        <a href="penelitian_dtps_rujukan.html">
                                             <span class="sub-item">Penelitian DTPS yang Menjadi Rujukan Tema
                                                 Tesis/Disertasi</span>
                                         </a>
@@ -372,7 +372,8 @@
             <div class="content">
                 <div class="page-inner">
                     <div class="page-header">
-                        <h4 class="page-title">Pengabdian</h4>
+                        <h4 class="page-title text-truncate" style="max-width:200px;"> Integrasi Kegiatan Penelitian/PkM
+                            dalam Pembelajaran</h4>
                         <ul class="breadcrumbs">
                             <li class="nav-home">
                                 <a href="#">
@@ -383,13 +384,13 @@
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Kerjasama Tridharma</a>
+                                <a href="#">Kurikulum</a>
                             </li>
                             <li class="separator">
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Pengabdian</a>
+                                <a href="#"> Integrasi Kegiatan Penelitian/PkM dalam Pembelajaran</a>
                             </li>
                         </ul>
                     </div>
@@ -397,26 +398,19 @@
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="card-header">
-                                    <div class="card-title">Kerjasama Tridharma - Pengabdian</div>
+                                    <div class="card-title"> Integrasi Kegiatan Penelitian/PkM dalam Pembelajaran</div>
                                 </div>
                                 <div class="card-body">
                                     <table
                                         class="table table-bordered table-responsive border-top border-left border-right table-add"
                                         style="white-space: nowrap;">
                                         <thead align="center">
-                                            <th rowspan="2">No</th>
-                                            <th rowspan="2">Lembaga Mitra</th>
-                                            <th colspan="3">Tingkat *)</th>
-                                            <th rowspan="2">Judul Kegiatan Kerjasama</th>
-                                            <th rowspan="2">Manfaat bagi PS yang Diakreditasi</th>
-                                            <th rowspan="2">Waktu dan Durasi</th>
-                                            <th rowspan="2">Bukti Kerjasama</th>
-                                            <th rowspan="2">Tahun Berakhirnya Kerjasama (YYYY)</th>
-                                            <tr>
-                                                <th>Internasional</th>
-                                                <th>Nasional</th>
-                                                <th>Wilayah</th>
-                                            </tr>
+                                            <th>No.</th>
+                                            <th>Judul <br>Penelitian/PkM</th>
+                                            <th>Nama Dosen</th>
+                                            <th>Mata Kuliah</th>
+                                            <th>Bentuk Integrasi</th>
+                                            <th>Tahun <br>(YYYY)</th>
                                         </thead>
                                         <tbody>
                                             <tr align="center" style="background-color: #D9D9D9;">
@@ -426,28 +420,35 @@
                                                 <td>4</td>
                                                 <td>5</td>
                                                 <td>6</td>
-                                                <td>7</td>
-                                                <td>8</td>
-                                                <td>9</td>
-                                                <td>10</td>
                                             </tr>
                                             <tr>
-                                                <td>1</td>
-                                                <td>Nuvoton Technology Corporation</td>
-                                                <td align="center">✅</td>
-                                                <td></td>
-                                                <td></td>
-                                                <td>Nuvoton Academic Program</td>
-                                                <td>Peningkatan Perbaikan materi Pembelajaran Matakuliah Computer and
-                                                    Device</td>
-                                                <td>2016-2018 , (2 Tahun)</td>
-                                                <td>Bukti Penyerahan 20 Mikrokontroler, Sertifikat Training of Trainer
+                                                <td align="center">1</td>
+                                                <td>Management Information System for Research <br> and
+                                                    Community Empowerment
                                                 </td>
-                                                <td>2018
-                                                </td>
+                                                <td>Meidar Hadi Avizenna, S.Kom., M.Eng.</td>
+                                                <td>Web Engineering</td>
+                                                <td>Merupakan tambahan materi perkuliahan studi kasus </td>
+                                                <td align="center">2020</td>
                                             </tr>
                                         </tbody>
                                     </table>
+                                    <div class="row mt-5 ">
+                                        <div class="col-md-12">
+                                            <div class="card">
+                                                <div class="card-header">
+                                                    <div class="card-title">Integrasi Kegiatan Penelitian/PkM dalam
+                                                        Pembelajaran
+                                                    </div>
+                                                </div>
+                                                <div class="card-body">
+                                                    <div class="chart-container">
+                                                        <canvas id="barOne"></canvas>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -472,7 +473,6 @@
     <!-- jQuery UI -->
     <script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="/assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
-
     <!-- jQuery Scrollbar -->
     <script src="/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 
@@ -480,56 +480,41 @@
     <!-- Chart JS -->
     <script src="/assets/js/plugin/chart.js/chart.min.js"></script>
 
-    <!-- jQuery Sparkline -->
-    <script src="/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
-
-    <!-- Chart Circle -->
-    <script src="/assets/js/plugin/chart-circle/circles.min.js"></script>
-
-    <!-- Datatables -->
-    <script src="/assets/js/plugin/datatables/datatables.min.js"></script>
-
-    <!-- Bootstrap Notify -->
-    <script src="/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
-
-    <!-- jQuery Vector Maps -->
-    <script src="/assets/js/plugin/jqvmap/jquery.vmap.min.js"></script>
-    <script src="/assets/js/plugin/jqvmap/maps/jquery.vmap.world.js"></script>
-
-    <!-- Sweet Alert -->
-    <script src="/assets/js/plugin/sweetalert/sweetalert.min.js"></script>
-
     <!-- Atlantis JS -->
     <script src="/assets/js/atlantis.min.js"></script>
-
-    <!-- Atlantis DEMO methods, don't include it in your project! -->
-    <script src="/assets/js/setting-demo.js"></script>
     <script>
-        $('#lineChart').sparkline([102, 109, 120, 99, 110, 105, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
-        });
-
-        $('#lineChart2').sparkline([99, 125, 122, 105, 110, 124, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
-        });
-
-        $('#lineChart3').sparkline([105, 103, 123, 100, 95, 105, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
+        barOne = document.getElementById('barOne').getContext('2d');
+        var myBarChartOne = new Chart(barOne, {
+            type: 'bar',
+            data: {
+                labels: ["2020", "2021"],
+                datasets: [{
+                    data: [3, 7],
+                    backgroundColor: 'rgb(23, 125, 255)',
+                    borderColor: 'rgb(23, 125, 255)',
+                }, ],
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                },
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function (tooltipItem) {
+                            return tooltipItem.yLabel;
+                        }
+                    }
+                }
+            }
         });
     </script>
 </body>
