--- a/frontend/before_login/table_three/dosen_pembimbing_utama.html
+++ b/frontend/before_login/table_three/dosen_pembimbing_utama.html
@@ -349,12 +349,12 @@
                             <div class="collapse" id="table_six">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="../table_six/penelitian_dtps_mahasiswa.html">
                                             <span class="sub-item">Penelitian DTPS yang Melibatkan Mahasiswa</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_six/penelitian_dtps_rujukan.html">
                                             <span class="sub-item">Penelitian DTPS yang Menjadi Rujukan Tema
                                                 Tesis/Disertasi</span>
                                         </a>
