--- a/frontend/before_login/table_three/pagelaran.html
+++ b/frontend/before_login/table_three/pagelaran.html
@@ -314,28 +314,22 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="#table_five">
-                                <i class="fas fa-book-reader"></i>
-                                <p>Kurikulum</p>
+                            <a data-toggle="collapse" href="#table_six">
+                                <i class="fas fa-bookmark"></i>
+                                <p>Penelitian</p>
                                 <span class="caret"></span>
                             </a>
-                            <div class="collapse" id="table_five">
+                            <div class="collapse" id="table_six">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="../table_five/kurikulum_capaian.html">
-                                            <span class="sub-item">Kurikulum, Capaian Pembelajaran, dan Rencana
-                                                Pembelajaran</span>
+                                        <a href="../table_six/penelitian_dtps_mahasiswa.html">
+                                            <span class="sub-item">Penelitian DTPS yang Melibatkan Mahasiswa</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="../table_five/integrasi_kegiatan.html">
-                                            <span class="sub-item">Integrasi Kegiatan Penelitian/PkM dalam
-                                                Pembelajaran</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="../table_five/kepuasan_mahasiswa.html">
-                                            <span class="sub-item">Kepuasan Mahasiswa</span>
+                                        <a href="../table_six/penelitian_dtps_rujukan.html">
+                                            <span class="sub-item">Penelitian DTPS yang Menjadi Rujukan Tema
+                                                Tesis/Disertasi</span>
                                         </a>
                                     </li>
                                 </ul>
