create until tabel seven

--- a/frontend/before_login/table_five/integrasi_kegiatan.html
+++ b/frontend/before_login/table_five/integrasi_kegiatan.html
@@ -308,7 +308,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
+                            <a href="../table_four/penggunaan_dana.html">
                                 <i class="fas fa-money-bill-alt"></i>
                                 <p>Penggunaan Dana</p>
                             </a>
@@ -362,6 +362,12 @@
                                     </li>
                                 </ul>
                             </div>
+                        </li>
+                        <li class="nav-item">
+                            <a href="../table_seven/pkm_dtps_mahasiswa.html">
+                                <i class="fas fa-book"></i>
+                                <p>PkM DTPS yang <br> Melibatkan Mahasiswa</p>
+                            </a>
                         </li>
                     </ul>
                 </div>
