--- a/frontend/before_login/table_four/penggunaan_dana.html
+++ b/frontend/before_login/table_four/penggunaan_dana.html
@@ -368,9 +368,9 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
-                                <i class="fas fa-arrow-circle-right"></i>
-                                <p>Login</p>
+                            <a href="../table_seven/pkm_dtps_mahasiswa.html">
+                                <i class="fas fa-book"></i>
+                                <p>PkM DTPS yang <br> Melibatkan Mahasiswa</p>
                             </a>
                         </li>
                     </ul>
