--- a/frontend/before_login/table_six/penelitian_dtps_mahasiswa.html
+++ b/frontend/before_login/table_six/penelitian_dtps_mahasiswa.html
@@ -308,7 +308,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
+                            <a href="../table_four/penggunaan_dana.html">
                                 <i class="fas fa-money-bill-alt"></i>
                                 <p>Penggunaan Dana</p>
                             </a>
@@ -322,19 +322,19 @@
                             <div class="collapse" id="table_five">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="kurikulum_capaian.html">
+                                        <a href="../table_five/kurikulum_capaian.html">
                                             <span class="sub-item">Kurikulum, Capaian Pembelajaran, dan Rencana
                                                 Pembelajaran</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="integrasi_kegiatan.html">
+                                        <a href="../table_five/integrasi_kegiatan.html">
                                             <span class="sub-item">Integrasi Kegiatan Penelitian/PkM dalam
                                                 Pembelajaran</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="kepuasan_mahasiswa.html">
+                                        <a href="../table_five/kepuasan_mahasiswa.html">
                                             <span class="sub-item">Kepuasan Mahasiswa</span>
                                         </a>
                                     </li>
@@ -363,6 +363,12 @@
                                 </ul>
                             </div>
                         </li>
+                        <li class="nav-item">
+                            <a href="../table_seven/pkm_dtps_mahasiswa.html">
+                                <i class="fas fa-book"></i>
+                                <p>PkM DTPS yang <br> Melibatkan Mahasiswa</p>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -372,8 +378,8 @@
             <div class="content">
                 <div class="page-inner">
                     <div class="page-header">
-                        <h4 class="page-title text-truncate" style="max-width:200px;"> Integrasi Kegiatan Penelitian/PkM
-                            dalam Pembelajaran</h4>
+                        <h4 class="page-title text-truncate" style="max-width:200px;">Penelitian DTPS yang Melibatkan
+                            Mahasiswa</h4>
                         <ul class="breadcrumbs">
                             <li class="nav-home">
                                 <a href="#">
@@ -384,13 +390,13 @@
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Kurikulum</a>
+                                <a href="#">Penelitian</a>
                             </li>
                             <li class="separator">
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#"> Integrasi Kegiatan Penelitian/PkM dalam Pembelajaran</a>
+                                <a href="#">Penelitian DTPS yang Melibatkan Mahasiswa</a>
                             </li>
                         </ul>
                     </div>
@@ -398,18 +404,18 @@
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="card-header">
-                                    <div class="card-title"> Integrasi Kegiatan Penelitian/PkM dalam Pembelajaran</div>
+                                    <div class="card-title">Penelitian DTPS yang Melibatkan Mahasiswa</div>
                                 </div>
                                 <div class="card-body">
                                     <table
-                                        class="table table-bordered table-responsive border-top border-left border-right table-add"
+                                        class="table table-bordered table-responsive-md border-top border-left border-right table-add"
                                         style="white-space: nowrap;">
                                         <thead align="center">
                                             <th>No.</th>
-                                            <th>Judul <br>Penelitian/PkM</th>
                                             <th>Nama Dosen</th>
-                                            <th>Mata Kuliah</th>
-                                            <th>Bentuk Integrasi</th>
+                                            <th>Tema Penelitian <br>sesuai Roadmap</th>
+                                            <th>Nama Mahasiswa</th>
+                                            <th>Judul Kegiatan</th>
                                             <th>Tahun <br>(YYYY)</th>
                                         </thead>
                                         <tbody>
@@ -422,33 +428,15 @@
                                                 <td>6</td>
                                             </tr>
                                             <tr>
-                                                <td align="center">1</td>
-                                                <td>Management Information System for Research <br> and
-                                                    Community Empowerment
-                                                </td>
-                                                <td>Meidar Hadi Avizenna, S.Kom., M.Eng.</td>
-                                                <td>Web Engineering</td>
-                                                <td>Merupakan tambahan materi perkuliahan studi kasus </td>
-                                                <td align="center">2020</td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <div class="row mt-5 ">
-                                        <div class="col-md-12">
-                                            <div class="card">
-                                                <div class="card-header">
-                                                    <div class="card-title">Integrasi Kegiatan Penelitian/PkM dalam
-                                                        Pembelajaran
-                                                    </div>
-                                                </div>
-                                                <div class="card-body">
-                                                    <div class="chart-container">
-                                                        <canvas id="barOne"></canvas>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
