--- a/frontend/before_login/table_three/dosen_industri.html
+++ b/frontend/before_login/table_three/dosen_industri.html
@@ -364,6 +364,12 @@
                                 </ul>
                             </div>
                         </li>
+                        <li class="nav-item">
+                            <a href="../table_seven/pkm_dtps_mahasiswa.html">
+                                <i class="fas fa-book"></i>
+                                <p>PkM DTPS yang <br> Melibatkan Mahasiswa</p>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
