--- a/frontend/before_login/index.html
+++ b/frontend/before_login/index.html
@@ -382,8 +382,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="#">
-                                <i class="fas fa-book"></i>
+                            <a href="./table_seven/pkm_dtps_mahasiswa.html"> <i class="fas fa-book"></i>
                                 <p>PkM DTPS yang <br> Melibatkan Mahasiswa</p>
                             </a>
                         </li>
