--- a/frontend/before_login/table_seven/pkm_dtps_mahasiswa.html
+++ b/frontend/before_login/table_seven/pkm_dtps_mahasiswa.html
@@ -308,7 +308,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
+                            <a href="../table_four/penggunaan_dana.html">
                                 <i class="fas fa-money-bill-alt"></i>
                                 <p>Penggunaan Dana</p>
                             </a>
@@ -364,7 +364,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="../table_seven/pkm_dtps_mahasiswa.html">
+                            <a data-toggle="collapse" href="pkm_dtps_mahasiswa.html">
                                 <i class="fas fa-book"></i>
                                 <p>PkM DTPS yang <br> Melibatkan Mahasiswa</p>
                             </a>
@@ -378,7 +378,8 @@
             <div class="content">
                 <div class="page-inner">
                     <div class="page-header">
-                        <h4 class="page-title">Mahasiswa Asing</h4>
+                        <h4 class="page-title text-truncate" style="max-width:200px;">PkM DTPS yang Melibatkan Mahasiswa
+                        </h4>
                         <ul class="breadcrumbs">
                             <li class="nav-home">
                                 <a href="#">
@@ -389,13 +390,13 @@
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Mahasiswa</a>
+                                <a href="#">Penelitian</a>
                             </li>
                             <li class="separator">
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Mahasiswa Asing</a>
+                                <a href="#">PkM DTPS yang Melibatkan Mahasiswa</a>
                             </li>
                         </ul>
                     </div>
@@ -403,31 +404,20 @@
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="card-header">
-                                    <div class="card-title">Mahasiswa - Mahasiswa Asing</div>
+                                    <div class="card-title">PkM DTPS yang Melibatkan Mahasiswa
+                                    </div>
                                 </div>
                                 <div class="card-body">
                                     <table
-                                        class="table table-bordered table-responsive-md border-top border-left border-right table-add"
+                                        class="table table-bordered table-responsive border-top border-left border-right table-add"
                                         style="white-space: nowrap;">
                                         <thead align="center">
-                                            <th rowspan="2">No.</th>
-                                            <th rowspan="2">Program Studi</th>
-                                            <th colspan="3">Jumlah Mahasiswa Aktif</th>
-                                            <th colspan="3" width="20px">Jumlah Mahasiswa Asing <br> Penuh Waktu
-                                                (Full-time)</th>
-                                            <th colspan="3">Jumlah Mahasiswa Asing <br> Paruh Waktu
-                                                (Part-time)</th>
-                                            <tr>
-                                                <th>TS-2</th>
-                                                <th>TS-1</th>
-                                                <th>TS</th>
-                                                <th>TS-2</th>
-                                                <th>TS-1</th>
-                                                <th>TS</th>
-                                                <th>TS-2</th>
-                                                <th>TS-1</th>
-                                                <th>TS</th>
-                                            </tr>
+                                            <th>No.</th>
+                                            <th>Nama Dosen</th>
+                                            <th>Tema Penelitian <br>sesuai Roadmap</th>
+                                            <th>Nama Mahasiswa</th>
+                                            <th>Judul <br>Tesis/Disertasi</th>
+                                            <th>Tahun <br>(YYYY)</th>
                                         </thead>
                                         <tbody>
                                             <tr align="center" style="background-color: #D9D9D9;">
@@ -437,27 +427,34 @@
                                                 <td>4</td>
                                                 <td>5</td>
                                                 <td>6</td>
-                                                <td>7</td>
-                                                <td>8</td>
-                                                <td>9</td>
-                                                <td>10</td>
-                                                <td>11</td>
                                             </tr>
-                                            <tr align="center">
+                                            <tr>
                                                 <td>1</td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
+                                                <td>Andi Widiyanto, M.Kom</td>
+                                                <td>Pengembangan sistem informasi dan <br>
+                                                    piranti TIK (BU-3.2)</td>
+                                                <td>Arif Zain</td>
+                                                <td>Teknologi Pengolahan Dan Pemasaran Kopi <br> Di Desa Tening
+                                                    Kecamatan Wonoboyo Kabupaten <br>Temanggung Jawa Tengah</td>
+                                                <td>2018</td>
                                             </tr>
                                         </tbody>
                                     </table>
+                                    <div class="row mt-md-4">
+                                        <div class="col-md-12">
+                                            <div class="card shadow-lg bg-white rounded">
+                                                <div class="card-header">
+                                                    <div class="card-title">PkM DTPS yang Melibatkan Mahasiswa
+                                                    </div>
+                                                </div>
+                                                <div class="card-body ">
+                                                    <div class="chart-container">
+                                                        <canvas id="barOne"></canvas>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -493,124 +490,13 @@
     <script src="/assets/js/atlantis.min.js"></script>
     <script>
         barOne = document.getElementById('barOne').getContext('2d');
-        barTwo = document.getElementById('barTwo').getContext('2d');
         var myBarChartOne = new Chart(barOne, {
             type: 'bar',
             data: {
-                labels: ["TS-1", "TS-2", "TS"],
+                labels: ["2018", "2019", "2020"],
                 datasets: [{
-                    data: [3, 7, 4],
+                    data: [3, 7],
                     backgroundColor: 'rgb(23, 125, 255)',
-                    borderColor: 'rgb(23, 125, 255)',
-                }, ],
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero: true
-                        }
-                    }]
-                },
-                legend: {
-                    display: false
-                },
-                tooltips: {
-                    callbacks: {
-                        label: function (tooltipItem) {
-                            return tooltipItem.yLabel;
-                        }
-                    }
-                }
-            }
-        });
-        var myBarChart = new Chart(barTwo, {
-            type: 'bar',
-            data: {
-                labels: ["TS-4", "TS-3", "TS-2", "TS-1", "TS"],
-                datasets: [{
-                        label: "Blue",
-                        data: [3, 7, 4, 5, 8],
-                        backgroundColor: 'rgb(23, 125, 255)',
-                        borderColor: 'rgb(23, 125, 255)',
-                    },
-                    {
-                        label: "Red",
-                        data: [4, 3, 5, 10, 6],
-                        backgroundColor: "red",
-                        borderColor: 'rgb(23, 125, 255)',
-                    },
-                    {
-                        label: "Green",
-                        data: [7, 2, 6, 4, 6],
-                        backgroundColor: "green",
-                    }
-                ]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero: true
-                        }
-                    }]
-                },
-                legend: {
-                    display: false
-                },
-                tooltips: {
-                    callbacks: {
-                        label: function (tooltipItem) {
-                            return tooltipItem.yLabel;
-                        }
-                    }
-                }
-
-            }
-        });
-        var myBarChartOne = new Chart(barThree, {
-            type: 'bar',
-            data: {
-                labels: ["TS-4", "TS-3", "TS-2", "TS-1", "TS"],
-                datasets: [{
-                    data: [3, 7, 4, 5, 8],
-                    backgroundColor: "red",
-                    borderColor: 'rgb(23, 125, 255)',
-                }, ],
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero: true
-                        }
-                    }]
-                },
-                legend: {
-                    display: false
-                },
-                tooltips: {
-                    callbacks: {
-                        label: function (tooltipItem) {
-                            return tooltipItem.yLabel;
-                        }
-                    }
-                }
-            }
-        });
-        var myBarChartOne = new Chart(barFour, {
-            type: 'bar',
-            data: {
-                labels: ["TS-4", "TS-3", "TS-2", "TS-1", "TS"],
-                datasets: [{
-                    data: [100, 90, 70, 80, 60],
-                    backgroundColor: "green",
                     borderColor: 'rgb(23, 125, 255)',
                 }, ],
             },
