create table eight

--- a/frontend/before_login/table_three/pagelaran.html
+++ b/frontend/before_login/table_three/pagelaran.html
@@ -363,6 +363,82 @@
                                 <p>PkM DTPS yang <br> Melibatkan Mahasiswa</p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a data-toggle="collapse" href="#table_eight">
+                                <i class="fas fa-database"></i>
+                                <p>Tabel 8</p>
+                                <span class="caret"></span>
+                            </a>
+                            <div class="collapse" id="table_eight">
+                                <ul class="nav nav-collapse">
+                                    <li>
+                                        <a href="../table_eight/ipk_lulusan.html">
+                                            <span class="sub-item">IPK Lulusan</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/prestasi_akademik.html">
+                                            <span class="sub-item">Prestasi Akademik</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/prestasi_non_akademik.html">
+                                            <span class="sub-item">Prestasi non-Akademik</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/masa_studi_lulusan.html">
+                                            <span class="sub-item">Masa Studi Lulusan</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/waktu_tunggu_lulusan.html">
+                                            <span class="sub-item">Waktu Tunggu Lulusan</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/kesesuaian_bidang.html">
+                                            <span class="sub-item">Kesesuaian Bidang Kerja</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/tempat_kerja.html">
+                                            <span class="sub-item">Tempat Kerja Lulusan</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/kepuasan_pengguna.html">
+                                            <span class="sub-item">Kepuasan Pengguna Lulusan</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/publikasi_ilmiah.html">
+                                            <span class="sub-item">Publikasi Ilmiah Mahasiswa</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/pagelaran.html">
+                                            <span class="sub-item">Pagelaran Mahasiswa</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/karya_ilmiahdisitasi.html">
+                                            <span class="sub-item">Karya Ilmiah Mahasiswa yang Disitasi</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/produk_jasa_mahasiswa.html">
+                                            <span class="sub-item">Produk Mahasiswa</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../table_eight/produk_jasa_mahasiswa.html">
+                                            <span class="sub-item">Luaran Penelitian</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                     </ul>>
                 </div>
             </div>
