--- a/frontend/before_login/table_four/penggunaan_dana.html
+++ b/frontend/before_login/table_four/penggunaan_dana.html
@@ -180,7 +180,7 @@
                             </span>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html">
+                            <a href="../index.html">
                                 <i class="fas fa-tachometer-alt active"></i>
                                 <p>Dashboard</p>
                             </a>
