--- a/frontend/before_login/table_two/mahasiswa_asing.html
+++ b/frontend/before_login/table_two/mahasiswa_asing.html
@@ -176,7 +176,7 @@
                             </span>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html">
+                            <a href="../index.html">
                                 <i class="fas fa-tachometer-alt active"></i>
                                 <p>Dashboard</p>
                             </a>
